<?xml version="1.0"?>
<package>
  <name>topological_tools</name>
  <version>0.1.2</version>
  <description>A ROS package that provides functionalities to describe topological maps and abstract complex navigation maps into discrete labeled locations</description>

  <maintainer email="jmessias@uva.nl">Joao Messias</maintainer>

  <license>LGPLv3</license>
  <url>https://github.com/jmessias/topological_tools</url>
  <author email="jmessias@uva.nl">Joao Messias</author>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
    
  <buildtool_depend>catkin</buildtool_depend>
</package>
